update as of 10.12.20

--- a/credit risk analysis_shinan.ipynb
+++ b/credit risk analysis_shinan.ipynb
@@ -4993,7 +4993,7 @@
     }
    ],
    "source": [
-    "# person_age and cb_person_cred_hist_length are highly correlacted , we think cb_person_cred_hist_length is a more interesting variable.\n",
+    "# person_age and cb_person_cred_hist_length are highly correlated , we think cb_person_cred_hist_length is a more interesting variable.\n",
     "# loan_amount and and loan_percent_income are highly correlated, we think loan_percent_income is more interesting variable.\n",
     "# to avoid multicollinearity, remove person age from data frame as well as loan_amount\n",
     "df_clean_final = df_clean.drop(['person_age', \"loan_amnt\"], axis=1)\n",
